# Dolly

./: .gitmodules  CMakeLists.txt  Main.cpp  Readme.md
Include/: Application.cpp  Application.hpp  Client.cpp  Client.hpp  Frame.cpp  Frame.hpp
Include/Dolly/: Application.hpp  Client.hpp  Core.hpp  Drawable.hpp
Include/Dolly/Geometry/: Point2D.hpp
Include/Dolly/Graphics/: Pixel.hpp
Include/Geometry/: Size.hpp
Include/Graphics/: Pixel.cpp  Pixel.hpp
Source/: Application.cpp  Client.cpp  Core.cpp  Drawable.cpp
Source/Graphics/: Pixel.cpp
